[Bug:3492] Modified term: 파일 관리자 to 파일
Change-Id: I3a807d3f7c950e4e0f430bf6e4ac1b9e881b698b

--- a/resources/gooroom-help-nemo/backup-check.html
+++ b/resources/gooroom-help-nemo/backup-check.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#backup">백업</a>
         <li><img class="img" src="grey.svg">
@@ -33,7 +33,7 @@
     <!-- small box -->
     <div class="small_rec" style="width:100%; height: fit-content;">
       <font class="font" style="font-size:14px;">
-        <pre>파일 관리자를 사용하여 파일을 복사하거나 이동할 때 시스템은 모든 데이터가 올바르게 전송되었는지 확인합니다. 그러나 매우 중요한 데이터를 전송하는 경우에는 필요에 따라 추가 검사를 수행하는 것이 좋습니다.
+        <pre>[파일]을 사용하여 파일을 복사하거나 이동할 때 시스템은 모든 데이터가 올바르게 전송되었는지 확인합니다. 그러나 매우 중요한 데이터를 전송하는 경우에는 필요에 따라 추가 검사를 수행하는 것이 좋습니다.
 
 대상 미디어에서 복사된 파일 및 폴더를 확인함으로써 이를 수행할 수 있습니다. 전송한 파일과 폴더가 실제로 백업에 포함되어 있다면 백업이 성공적으로 완료되었다고 판단할 수 있습니다.
 
