--- a/resources/gooroom-help-nemo/files-browse.html
+++ b/resources/gooroom-help-nemo/files-browse.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#common_task">일반적인 작업</a>
         <li><img class="img" src="grey.svg">
@@ -25,9 +25,9 @@
    <div class ="div_root">
 
     <font class="font" style="font-size:22;">파일 및 폴더 찾아보기</font><br><br>
-    <font class="font text"> <pre>파일 관리자로 컴퓨터에서 파일을 찾고 구성합니다. <br>
-파일 관리자를 사용하면 저장 장치(예: 외장 하드 디스크), 파일 서버 및 네트워크 공유에 있는 파일을 관리할 수도 있습니다.<br>
-파일 관리자를 시작하려면 활동 개요에서 파일을 엽니다. 애플리케이션 검색 방법과 동일하게 개요를 통해 파일과 폴더를 검색할 수도 있습니다.</pre>
+    <font class="font text"> <pre>파일로 컴퓨터에서 파일을 찾고 구성합니다. <br>
+[파일]을 사용하면 저장 장치(예: 외장 하드 디스크), 파일 서버 및 네트워크 공유에 있는 파일을 관리할 수도 있습니다.<br>
+[파일]을 시작하려면 활동 개요에서 파일을 엽니다. 애플리케이션 검색 방법과 동일하게 개요를 통해 파일과 폴더를 검색할 수도 있습니다.</pre>
     </font>
 
     <br><br><br>
@@ -37,7 +37,7 @@
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class ="font" style="font-size:14px;">
-         <pre>파일 관리자에서 폴더를 두 번 클릭하여 엽니다. 파일을 두 번 클릭하거나 마우스 가운데 버튼 클릭하여 기본 애플리케이션으로 엽니다.
+         <pre>파일에서 폴더를 두 번 클릭하여 엽니다. 파일을 두 번 클릭하거나 마우스 가운데 버튼 클릭하여 기본 애플리케이션으로 엽니다.
 폴더를 마우스 가운데 버튼으로 클릭하면 새 탭에서 엽니다. 폴더를 마우스 오른쪽 버튼으로 클릭하여 새 탭이나 새 창에서 열 수도 있습니다.
 
 
