--- a/resources/gooroom-help-nemo/files-hidden.html
+++ b/resources/gooroom-help-nemo/files-hidden.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
           <li><a href="index#tips_N_questions">유용한 정보</a>
         <li><img class="img" src="grey.svg">
@@ -26,7 +26,7 @@
 
     <font class="font" style="font-size:22;">파일 숨기기</font><br><br>
     <font class="font text">
-      <pre>파일 관리자는 숨기기 및 숨기기 취소 기능을 제공합니다. 숨김 파일은 파일 관리자에서 표시되지 않지만 삭제된 것이 아닙니다.
+      <pre>[파일]은 숨기기 및 숨기기 취소 기능을 제공합니다. 숨김 파일은 [파일]에서 표시되지 않지만 삭제된 것이 아닙니다.
 
 파일을 숨기려면 파일 이름이 . 접두사로 시작하도록 <a href="files-rename">변경</a>합니다. 예를 들어 example.txt라는 파일을 숨기려면 파일 이름을 .example.txt로 변경합니다.
 
