--- a/resources/gooroom-help-nemo/files-open.html
+++ b/resources/gooroom-help-nemo/files-open.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#file_related_task">더 많은 파일 관련 작업</a>
         <li><img class="img" src="grey.svg">
@@ -26,10 +26,10 @@
 
     <font class="font" style="font-size:22;">다른 애플리케이션으로 파일 열기</font><br><br>
     <font class="font text">
-      <pre>파일 관리자에서 파일을 두 번 클릭(또는 가운데 버튼 클릭)하면 해당 파일 유형에 대해 설정된 기본 애플리케이션으로 파일을 엽니다. 파일을 다른 애플리케이션에서 열거나 온라인에서 애플리케이션을 검색하거나 동일한 유형의 모든 파일에 대한 기본 애플리케이션 설정을 변경할 수 있습니다.
+      <pre>파일에서 파일을 두 번 클릭(또는 가운데 버튼 클릭)하면 해당 파일 유형에 대해 설정된 기본 애플리케이션으로 파일을 엽니다. 파일을 다른 애플리케이션에서 열거나 온라인에서 애플리케이션을 검색하거나 동일한 유형의 모든 파일에 대한 기본 애플리케이션 설정을 변경할 수 있습니다.
 
 파일을 다른 애플리케이션으로 열려면 파일을 마우스 오른쪽 버튼으로 클릭한 다음 원하는 애플리케이션을 선택합니다. 원하는 애플리케이션이 표시되지 않으면 [다른 프로그램으로 열기]를 선택합니다. 
-파일 관리자는 기본적으로 파일 처리 애플리케이션으로 알려진 항목만 표시합니다. 
+[파일]는 기본적으로 파일 처리 애플리케이션으로 알려진 항목만 표시합니다. 
 시스템에 설치된 모든 애플리케이션을 목록을 보려면 [모든 프로그램 보기(V)]를 선택합니다.</pre>
     </font>
 
