--- a/resources/gooroom-help-nemo/files-recover.html
+++ b/resources/gooroom-help-nemo/files-recover.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#file_related_task">더 많은 파일 관련 작업</a>
         <li><img class="img" src="grey.svg">
@@ -25,7 +25,7 @@
    <div class="div_root">
 
     <font class="font" style="font-size:22;">휴지통에서 파일 복구</font><br><br>
-    <font class="font text"> <pre>파일 관리자를 사용하여 파일을 삭제하면 휴지통으로 이동하며 필요에 따라 이를 복구할 수 있습니다.</pre>
+    <font class="font text"> <pre>[파일]을 사용하여 파일을 삭제하면 휴지통으로 이동하며 필요에 따라 이를 복구할 수 있습니다.</pre>
     </font>
 
     <br><br><br>
@@ -34,7 +34,7 @@
         <font class="font" style="font-size:14px;">
           <pre><b>휴지통에서 파일을 복구하려면 :</b></pre>
           <div class="discription">
-              <pre>1. 파일을 새로 생성하거나 기존 파일을 선택하고 파일 관리자를 엽니다.
+              <pre>1. 파일을 새로 생성하거나 기존 파일을 선택하고 [파일]을 엽니다.
 
 2. 사이드 바에서 휴지통을 클릭합니다. 사이드 바가 보이지 않으면 창의 오른쪽에 있는 메뉴 버튼을 누르고 [사이드 바]를 선택합니다.
 
