--- a/resources/gooroom-help-nemo/files-removedrive.html
+++ b/resources/gooroom-help-nemo/files-removedrive.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
           <li><a href="index#drives_N_disks">이동식 드라이브 및 외장 디스크</a>
         <li><img class="img" src="grey.svg">
