--- a/resources/gooroom-help-nemo/files-sort.html
+++ b/resources/gooroom-help-nemo/files-sort.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#common_task">일반적인 작업</a>
         <li><img class="img" src="grey.svg">
@@ -53,7 +53,7 @@
     <!-- small box -->
     <div class="small_rec" style="width:100%; height: fit-content;">
         <font class="font" style="font-size:14px;">
-          <pre>파일 정렬 방법을 변경하려면 파일 관리자에서 열 제목 중 하나를 클릭합니다. 예를 들어 [유형]을 클릭하여 파일 유형별로 정렬합니다. 열 제목을 한번 더 클릭하면 역순으로 정렬됩니다.
+          <pre>파일 정렬 방법을 변경하려면 [파일]에서 열 제목 중 하나를 클릭합니다. 예를 들어 [유형]을 클릭하여 파일 유형별로 정렬합니다. 열 제목을 한번 더 클릭하면 역순으로 정렬됩니다.
 
 더 많은 속성 열을 표시하여 해당 열을 기준으로 정렬할 수도 있습니다. 열 영역에서 마우스 오른쪽 버튼을 클릭한 다음 표시할 열을 선택합니다. 사용 가능한 열에 대한 설명은 <a href="nautilus-list">파일 목록 열 환경 설정</a>을 참조합니다.</pre>
     </div>
