--- a/resources/gooroom-help-nemo/nautilus-file-properties-permissions.html
+++ b/resources/gooroom-help-nemo/nautilus-file-properties-permissions.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#tips_N_questions">유용한 정보</a>
         <li><img class="img" src="grey.svg">
@@ -46,7 +46,7 @@
 
 소유자 및 파일 그룹에 있는 사용자 이외의 사용자에 대한 권한을 설정할 수도 있습니다.
 
-파일이 스크립트와 같은 프로그램인 경우 [파일을 프로그램으로 실행 허용]을 선택하여 실행해야 합니다. 이 옵션을 선택해도 파일 관리자는 애플리케이션에서 파일을 열거나 수행할 작업을 요청할 수 있습니다. 자세한 내용은 <a href="nautilus-behavior#executable">실행 가능한 텍스트 파일</a>을 참조합니다.</pre></font>
+파일이 스크립트와 같은 프로그램인 경우 [파일을 프로그램으로 실행 허용]을 선택하여 실행해야 합니다. 이 옵션을 선택해도 [파일]는 애플리케이션에서 파일을 열거나 수행할 작업을 요청할 수 있습니다. 자세한 내용은 <a href="nautilus-behavior#executable">실행 가능한 텍스트 파일</a>을 참조합니다.</pre></font>
     </div>
 
      <a name="folders"></a>
