--- a/resources/gooroom-help-nemo/nautilus-prefs.html
+++ b/resources/gooroom-help-nemo/nautilus-prefs.html
@@ -9,11 +9,11 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#file_related_task">더 많은 파일 관련 작업</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="#top">파일 관리자 환경 설정</a>
+        <li><a href="#top">파일 환경 설정</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -24,12 +24,12 @@
    <!-- for align 30px -->
    <div class="div_root">
 
-    <font class="font" style="font-size:22;">파일 관리자 환경 설정</font><br><br>
+    <font class="font" style="font-size:22;">파일 환경 설정</font><br><br>
 
      <!-- small box -->
      <div class="small_rec left">
         <font class="font text">
-          <pre><a href="nautilus-behavior">파일 관리자 동작 환경 설정</a>
+          <pre><a href="nautilus-behavior">파일 동작 환경 설정</a>
 
 한 번 클릭으로 파일을 실행할지 여부, 실행 가능한 텍스트 파일을 처리하는 방법 및 휴지통 비우기 동작 등을 설정합니다.
 </pre>
@@ -38,9 +38,9 @@
  
       <div class="small_rec right">
         <font class="font text">
-          <pre><a href="nautilus-display">파일 관리자 표시 기본 설정</a>
+          <pre><a href="nautilus-display">파일 표시 기본 설정</a>
 
-파일 관리자에서 표시되는 아이콘 캡션을 제어합니다.</pre>
+[파일]에서 표시되는 아이콘 캡션을 제어합니다.</pre>
         </font>
       </div>
   
@@ -56,7 +56,7 @@
          <font class="font text"> 
            <pre><a href="nautilus-views">파일 보기 환경 설정</a>
  
-파일 관리자의 기본 정렬 순서 및 그룹화를 지정합니다.</pre>
+[파일]의 기본 정렬 순서 및 그룹화를 지정합니다.</pre>
          </font>
        </div>
      <br><br>
