--- a/resources/gnome-control-center/mouse-middleclick.html
+++ b/resources/gnome-control-center/mouse-middleclick.html
@@ -44,7 +44,7 @@
 
 대부분의 웹 브라우저에서 링크를 새 탭으로 열 때 마우스 중간 클릭을 사용합니다. 링크에서 마우스 중간 단추를 누르면 해당 링크가 새 탭으로 열립니다.
 
-파일 관리자에서 중간 클릭은 두 가지 역할을 합니다. 첫째, 폴더 이름 위에서 마우스 중간 단추를 누르면 해당 폴더가 새 탭으로 열립니다. 이는 웹 브라우저의 기능과 동일합니다. 둘째, 파일 이름 위에서 마우스 중간 단추를 누르면 해당 파일이 엽립니다. 이는 파일을 두 번 클릭한 것과 동일합니다.
+[파일]에서 중간 클릭은 두 가지 역할을 합니다. 첫째, 폴더 이름 위에서 마우스 중간 단추를 누르면 해당 폴더가 새 탭으로 열립니다. 이는 웹 브라우저의 기능과 동일합니다. 둘째, 파일 이름 위에서 마우스 중간 단추를 누르면 해당 파일이 엽립니다. 이는 파일을 두 번 클릭한 것과 동일합니다.
 
 일부 애플리케이션에서 마우스 중간 단추를 누르면 특수한 기능이 실행되며 이에 대한 자세한 내용은 해당 애플리케이션 도움말을 참고하시기 바랍니다.</pre>
         </font>
