--- a/resources/gooroom-help-eog/opening_a_picture_by_default.html
+++ b/resources/gooroom-help-eog/opening_a_picture_by_default.html
@@ -35,7 +35,7 @@
      </pre>
 
         <div class="discription">
-        <pre>1. [파일 관리자]에서 파일을 마우스 오른쪽 단추로 클릭한 다음 [속성]을 선택합니다.
+        <pre>1. [파일]에서 파일을 마우스 오른쪽 단추로 클릭한 다음 [속성]을 선택합니다.
 
 2. [다른 프로그램으로 열기] 탭으로 이동합니다. 추천 애플리케이션 목록이 나타납니다.
 
