--- a/resources/gooroom-help-gnome-mpv/open-file.html
+++ b/resources/gooroom-help-gnome-mpv/open-file.html
@@ -42,9 +42,9 @@
 
     <div class="small_rec right">
       <font class="font text">
-        <pre><b>파일 관리자 이용하기</b>
+        <pre><b>파일 이용하기</b>
 
-파일 관리자에서 파일을 두 번 클릭하거나 오른쪽 마우스 단추를 클릭한 다음 [동영상으로 열기]를 선택합니다.
+[파일]에서 파일을 두 번 클릭하거나 오른쪽 마우스 단추를 클릭한 다음 [동영상으로 열기]를 선택합니다.
         </pre>
       </font>
     </div>
