--- a/resources/gooroom-help-nemo/files-search.html
+++ b/resources/gooroom-help-nemo/files-search.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#common_task">일반적인 작업</a>
         <li><img class="img" src="grey.svg">
@@ -25,7 +25,7 @@
    <div class="div_root">
 
     <font class="font" style="font-size:22;">파일 검색</font><br><br>
-    <font class="font text"><pre>파일 관리자에서 이름 또는 파일 유형을 기준으로 파일을 검색할 수 있습니다.</pre>
+    <font class="font text"><pre>파일에서 이름 또는 파일 유형을 기준으로 파일을 검색할 수 있습니다.</pre>
     </font>
 
     <br><br><br>
