--- a/resources/gooroom-help-nemo/files-select.html
+++ b/resources/gooroom-help-nemo/files-select.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#tips_N_questions">유용한 정보</a>
         <li><img class="img" src="grey.svg">
