--- a/resources/gooroom-help-nemo/nautilus-behavior.html
+++ b/resources/gooroom-help-nemo/nautilus-behavior.html
@@ -9,13 +9,13 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#file_related_task">더 많은 파일 관련 작업</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="nautilus-prefs">파일 관리자 환경 설정</a>
+        <li><a href="nautilus-prefs">파일 환경 설정</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="#top">파일 관리자 동작 환경 설정</a>
+        <li><a href="#top">파일 동작 환경 설정</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -26,7 +26,7 @@
    <!-- for align 30px -->
    <div class="div_root">
 
-    <font class="font" style="font-size:22;">파일 관리자 동작 환경 설정</font><br><br>
+    <font class="font" style="font-size:22;">파일 동작 환경 설정</font><br><br>
     <font class="font text">
       <pre>한 번 클릭으로 파일을 실행할지 여부, 실행 가능한 텍스트 파일을 처리하는 방법 및 휴지통 비우기 동작 등을 설정합니다.
 
@@ -93,7 +93,7 @@
   <footer>
   <font class="font" style="font-size:14px;line-height:2;"><B>자세한 정보</B><br>
     <a href="index#file_related_task">더 많은 파일 관련 작업</a><br>
-    <a href="nautilus-prefs">파일 관리자 설정</a> - 파일 브라우저 기본 설정을 확인하고 변경합니다.<br>
+    <a href="nautilus-prefs">파일 설정</a> - 파일 브라우저 기본 설정을 확인하고 변경합니다.<br>
     <a href="files-delete">파일 및 폴더 삭제</a> - 더 이상 필요하지 않은 파일 또는 폴더를 삭제합니다.</font><br><br>
   </footer>
 
