--- a/resources/gooroom-help-nemo/nautilus-display.html
+++ b/resources/gooroom-help-nemo/nautilus-display.html
@@ -9,13 +9,13 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#file_related_task">더 많은 파일 관련 작업</a>
         <li><img class="img" src="grey.svg">
-          <li><a href="nautilus-prefs">파일 관리자 환경 설정</a>
+          <li><a href="nautilus-prefs">파일 환경 설정</a>
           <li><img class="img" src="grey.svg">
-        <li><a href="#top">파일 관리자 표시 기본 설정</a>
+        <li><a href="#top">파일 표시 기본 설정</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -26,9 +26,9 @@
    <!-- for align 30px -->
    <div class="div_root">
 
-    <font class="font" style="font-size:22;">파일 관리자 표시 기본 설정</font><br><br>
+    <font class="font" style="font-size:22;">파일 표시 기본 설정</font><br><br>
     <font class="font text">
-      <pre>파일 관리자에서 아이콘 아래에 캡션이 표시되는 방법을 설정할 수 있습니다. 창 오른쪽 상단에 있는 메뉴 버튼을 클릭하고 [기본 설정]을 선택한 다음 [보기] 탭을 선택합니다.</pre>
+      <pre>파일에서 아이콘 아래에 캡션이 표시되는 방법을 설정할 수 있습니다. 창 오른쪽 상단에 있는 메뉴 버튼을 클릭하고 [기본 설정]을 선택한 다음 [보기] 탭을 선택합니다.</pre>
     </font>
 
     <br><br><br>
@@ -83,7 +83,7 @@
   <footer>
   <font class="font" style="font-size:14px;line-height:2;"><B>자세한 정보</B><br>
     <a href="index#file_related_task">더 많은 파일 관련 작업</a><br>
-    <a href="nautilus-prefs">파일 관리자 설정</a> - 파일 브라우저 기본 설정을 확인하고 변경합니다.<br>
+    <a href="nautilus-prefs">파일 설정</a> - 파일 브라우저 기본 설정을 확인하고 변경합니다.<br>
   </font>
   </footer>
 
