--- a/resources/gooroom-help-nemo/nautilus-list.html
+++ b/resources/gooroom-help-nemo/nautilus-list.html
@@ -9,11 +9,11 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#file_related_task">더 많은 파일 관련 작업</a>
         <li><img class="img" src="grey.svg">
-          <li><a href="nautilus-prefs">파일 관리자 환경 설정</a>
+          <li><a href="nautilus-prefs">파일 환경 설정</a>
           <li><img class="img" src="grey.svg">
         <li><a href="#top">파일 목록 열 환경 설정</a>
       </ul>
@@ -107,7 +107,7 @@ PDF 문서, JPEG 이미지, MP3 오디오 등과 같은 폴더 또는 파일 형
    <footer>
       <font class="font" style="font-size:14px;line-height:2;"><B>자세한 정보</B><br>
         <a href="index#file_related_task">더 많은 파일 관련 작업</a><br>
-        <a href="nautilus-prefs">파일 관리자 설정</a> - 파일 브라우저 기본 설정을 확인하고 변경합니다.<br>
+        <a href="nautilus-prefs">파일 설정</a> - 파일 브라우저 기본 설정을 확인하고 변경합니다.<br>
   </footer>
 
   <footer class="info">
