--- a/resources/gooroom-help-nemo/nautilus-views.html
+++ b/resources/gooroom-help-nemo/nautilus-views.html
@@ -9,11 +9,11 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일 관리자</a>
+        <li><a href="index#top">파일</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#file_related_task">더 많은 파일 관련 작업</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="nautilus-prefs">파일 관리자 환경 설정</a>
+        <li><a href="nautilus-prefs">파일 환경 설정</a>
         <li><img class="img" src="grey.svg">
         <li><a href="#top">파일 보기 환경 설정</a>
       </ul>
@@ -42,7 +42,7 @@
 개별 폴더에서 도구 모음의 [보기 옵션] 메뉴 버튼을 클릭하고 [정렬] 아래에서 원하는 옵션을 선택하거나 목록 보기 방식에서 목록 열 머리글을 클릭하여 <a href="files-sort">파일 및 폴더 정렬</a> 방법을 변경할 수 있습니다.<br>
 
 <b>파일보다 먼저 폴더 정렬</b>
-기본적으로 파일 관리자는 폴더를 파일보다 먼저 나열하지 않습니다. 모든 폴더를 파일 앞에 나열하려면 이 옵션을 선택합니다.</pre>
+기본적으로 [파일]는 폴더를 파일보다 먼저 나열하지 않습니다. 모든 폴더를 파일 앞에 나열하려면 이 옵션을 선택합니다.</pre>
        </font>
      </div>
      <!--end of small box-->
@@ -52,7 +52,7 @@
   <footer>
       <font class="font" style="font-size:14px;line-height:2;"><B>자세한 정보</B><br>
         <a href="index#file_related_task">더 많은 파일 관련 작업</a><br>
-        <a href="nautilus-prefs">파일 관리자 설정</a> - 파일 브라우저 기본 설정을 확인하고 변경합니다.<br>
+        <a href="nautilus-prefs">파일 설정</a> - 파일 브라우저 기본 설정을 확인하고 변경합니다.<br>
   </footer>
 
   <footer class="info">
