Updated gooroom-update contents
Change-Id: Id7ff0fdc4f6970534c343e908f22abb15a974d5c

--- a/resources/gooroom-help-gooroom-update/index.html
+++ b/resources/gooroom-help-gooroom-update/index.html
@@ -29,7 +29,7 @@
 
     <div class="small_rec left">
       <font class="font text">
-        <pre><a href='update-type'>업데이트 유형</a></pre>
+        <pre><a href='update-type'>업데이트 형식</a></pre>
       </font>
     </div>
     
