--- a/resources/gooroom-help-gooroom-update/installation.html
+++ b/resources/gooroom-help-gooroom-update/installation.html
@@ -32,17 +32,17 @@
     <div class="small_rec" style="width:100%; height: fit-content;">
       <font class="font text">
         <pre>모두 선택
-        <div class='discription'>업데이트하려는 패키지를 선택하여 설치할 수 있습니다.
-업데이트 관리자에서는 기본적으로 모두 선택되어 있으므로 전체 소프트웨어 업데이트를 쉽게 설치할 수 있습니다.
-일부 항목이 선택되어 있지 않은 경우 [모두 선택] 버튼을 클릭하여 [업그레이드] 열의 확인란이 모두 선택되어 있는지 확인합니다.</div>
+        <div class='discription'>업데이트하려는 패키지를 선택하여 설치할 수 있습니다.<br>
+업데이트 관리자에서는 기본적으로 모두 선택되어 있으므로 전체 소프트웨어 업데이트를 쉽게 설치할 수 있습니다.<br>
+일부 항목이 선택되어 있지 않은 경우 [선택] 버튼을 클릭하여 [선택] 열의 확인란이 모두 선택되어 있는지 확인합니다.</div>
 
 
 선택 해제<br>
-<div class='discription'>[선택 해제] 버튼을 클릭하면 모두 선택 해제됩니다.</div>
+<div class='discription'>[선택] 열을 한번 더 클릭하면 모두 선택 해제됩니다.</div>
 
          
 일부 업데이트<br>
-<div class='discription'>일부 항목만 업데이트하려면 해당하는 패키지의 [업그레이드] 열을 선택합니다.</div>
+<div class='discription'>일부 항목만 업데이트하려면 해당하는 패키지의 [선택] 열을 선택합니다.</div>
 
 새로고침<br>
 <div class='discription'>[새로고침] 버튼을 클릭하면 업데이트 사항을 새로고침하여 볼 수 있습니다.</div>
@@ -51,9 +51,6 @@
 <div class='discription'>선택된 업데이트 사항을 시스템에 업데이트 합니다.</div>
         </pre>
       </font>
-      <div style="width:40%; height:auto;">
-        <img src="update-main.png" style="width:100%; border-radius:10px;">
-      </div>
     </div>
     <!--end of installation-->
 
