--- a/resources/gooroom-help-gooroom-update/preferences.html
+++ b/resources/gooroom-help-gooroom-update/preferences.html
@@ -40,13 +40,13 @@
         <pre>등급
     <div class="discription"><table class="font text" style="width:80%; border-spacing:10px;">
   <tr>
-    <td><img src = "level1.png">  구름 패키지</td><td>구름에서 업데이트를 제공하는 패키지입니다.</td>
+    <td><img src = "level1.svg">  구름 패키지</td><td>구름에서 업데이트를 제공하는 패키지입니다.</td>
   </tr>
   <tr>
-    <td><img src = "level2.png">  데비안 패키지</td><td>데비안에서 업데이트를 제공하는 패키지입니다.</td>
+    <td><img src = "level2.svg">  데비안 패키지</td><td>데비안에서 업데이트를 제공하는 패키지입니다.</td>
   </tr>
   <tr>
-    <td><img src = "level3.png">  타사 패키지</td><td>타사에서 업데이트를 제공하는 패키지입니다.</td>
+    <td><img src = "level3.svg">  타사 패키지</td><td>타사에서 업데이트를 제공하는 패키지입니다.</td>
   </tr>
 </table></div>        
         </pre>
