--- a/resources/gooroom-help-gooroom-update/synaptic.html
+++ b/resources/gooroom-help-gooroom-update/synaptic.html
@@ -37,11 +37,7 @@
 
         <pre>실행하기
     <div class="discription">업데이트 관리자의 [파일(F)] 메뉴에서 시냅틱 패키지 관리자를 실행할 수 있습니다.<br>
-시냅틱 패키지 관리자를 사용하려면 루트 권한이 필요합니다.
-<div style="width:30%; height:auto;">
-    <img src = "synaptic.png" style="border-radius:10px;">
-</div>
-    </div>
+시냅틱 패키지 관리자를 사용하려면 루트 권한이 필요합니다.</div>
         </pre>
 
         <pre>특징
@@ -57,12 +53,10 @@
         </pre>
 
         <pre>주의 사항
-            <div class="discription">시냅틱 패키지 관리자는 시스템의 코어를 변경하므로 주의해서 사용하지 않으면 시스템을 사용하지 못하게 될 수 있습니다.</div>
+            <div class="discription">시냅틱 패키지 관리자는 시스템의 코어를 변경하므로 주의해서 사용하지 않으면 시스템을 사용하지 못하게 될 수 있습니다.<br>
+다른 프로그램에서 업데이트 설치 및 업그레이드를 동시에 하는 것을 막기 위해 업데이트 관리자와 시냅틱 패키지 관리자는 동시에 조작할 수 없습니다.<br>
+시냅틱 패키지 관리자가 실행중이면 업데이트 관리자의 조작이 불가하고, 시냅틱 패키지 관리자가 종료되면 업데이트 관리자를 조작할 수 있습니다.<br></div>
         </pre>
-
-        <pre>더 많은 정보
-            <div class="discription">시냅틱 패키지 관리자에 대한 자세한 내용은 <a href="/usr/share/synaptic/html/index">여기</a>를 클릭합니다.</div>
-          </pre>
       </font>
     </div>
     <!--end of synaptic-->
