--- a/resources/gooroom-help-gooroom-update/view-preferences.html
+++ b/resources/gooroom-help-gooroom-update/view-preferences.html
@@ -29,11 +29,11 @@
       <font class="font text">
         <pre>[보기(V)] 메뉴에서 업데이트 관리자의 보기 설정을 변경할 수 있습니다.</pre><br>
         <pre>열 설정
-          <div class="discription">업데이트 화면에 표시할 열을 설정할 수 있습니다.
+          <div class="discription">업데이트 화면에 표시할 열을 설정할 수 있습니다.<br>
 보고 싶은 열 제목에 체크를 하면 업데이트 화면에 열이 표시됩니다.</div>
         </pre>
 
-        <pre>상세 보기
+        <pre>상세 보기
     <div class="discription">상세 보기에 체크하면 패키지 열 아래에 패키지에 대한 설명이 같이 표시됩니다.</div>        
         </pre>
 
