--- a/resources/gooroom-help-eog/print.html
+++ b/resources/gooroom-help-eog/print.html
@@ -39,8 +39,7 @@
 2. [일반] 탭을 선택합니다. 사용하려는 프린터와 인쇄하려는 매수를 선택합니다.
 
 3. [이미지 설정] 탭으로 이동하여 사진의 위치 및 크기를 조정할 수 있습니다.
-<div style="padding:30px">이미지를 마우스로 드래그하면 위치를 조정할 수도 있습니다.</div>
-
+<div style="padding-left:30px; padding-top: 15px; padding-bottom: 0px;">이미지를 마우스로 드래그하면 위치를 조정할 수도 있습니다.</div>
 4. 고화질 사진 인화지를 사용하려면 [페이지 설정] 탭으로 이동하여 용지 종류를 지정합니다. [화질] 탭에서 고화질로 설정을 하면 가장 좋은 화질로 사진을 인쇄합니다.
 
 5. [인쇄]를 누릅니다.</pre>
