--- a/resources/gooroom-help-nemo/files-lost.html
+++ b/resources/gooroom-help-nemo/files-lost.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일</a>
+        <li><a href="index#top">파일 관리자</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#file_related_task">더 많은 파일 관련 작업</a>
         <li><img class="img" src="grey.svg">
@@ -37,7 +37,7 @@
 
  - 실수로 파일을 삭제했을 수 있습니다. 파일을 삭제하면 휴지통으로 이동하여 수동으로 휴지통을 비울 때까지 유지됩니다. 삭제된 파일을 복원하는 방법은 <a href="files-recover">휴지통에서 파일 복원</a>을 참조합니다.
 
- - 속성을 숨김 파일로 변경하는 과정에서 . 접두사가 추가되어 파일 이름이 변경되었을 수 있습니다. 접두사 . 또는 접미사 ~가 포함된 파일은 [파일]에서 표시되지 않습니다. [보기 옵션]을 클릭한 다음 [숨김 파일 표시]를 선택하여 숨김 파일을 표시합니다. 자세한 내용은 <a href="files-hidden">파일 숨기기</a>를 참조합니다.</pre>
+ - 속성을 숨김 파일로 변경하는 과정에서 . 접두사가 추가되어 파일 이름이 변경되었을 수 있습니다. 접두사 . 또는 접미사 ~가 포함된 파일은 [파일 관리자]에서 표시되지 않습니다. [보기 옵션]을 클릭한 다음 [숨김 파일 표시]를 선택하여 숨김 파일을 표시합니다. 자세한 내용은 <a href="files-hidden">파일 숨기기</a>를 참조합니다.</pre>
             </div><br>
       </div>
    <!-- end of div_root-->
