--- a/resources/gooroom-help-nemo/nautilus-bookmarks-edit.html
+++ b/resources/gooroom-help-nemo/nautilus-bookmarks-edit.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일</a>
+        <li><a href="index#top">파일 관리자</a>
         <li><img class="img" src="grey.svg">
           <li><a href="index#tips_N_questions">유용한 정보</a>
         <li><img class="img" src="grey.svg">
@@ -25,7 +25,7 @@
    <div class="div_root">
 
     <font class="font" style="font-size:22;">폴더 책갈피 편집</font><br><br>
-    <font class="font text"><pre>책갈피는 [파일]의 사이드 바에 나열됩니다. 사이드 바에서 책갈피를 편집하거나 상단 책갈피 메뉴를 통해 편집할 수 있습니다.</pre>
+    <font class="font text"><pre>책갈피는 [파일 관리자]의 사이드 바에 나열됩니다. 사이드 바에서 책갈피를 편집하거나 상단 책갈피 메뉴를 통해 편집할 수 있습니다.</pre>
     </font>
 
     <br><br><br>
