--- a/resources/grac-editors/index.html
+++ b/resources/grac-editors/index.html
@@ -57,7 +57,7 @@
 
      <div class="small_rec right">
        <font class="font text">
-         <pre><a href="network">네트워크</a></pre>
+         <pre><a href="network">방화벽</a></pre>
        </font>
      </div>
 
