--- a/resources/grac-editors/network.html
+++ b/resources/grac-editors/network.html
@@ -13,7 +13,7 @@
         <li><img class="img" src="grey.svg">
         <li><a href="index#policy">정책</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="#top">네트워크</a>
+        <li><a href="#top">방화벽</a>
       </ul>
      </nav> <!--end of navbar-->
 
@@ -26,24 +26,18 @@
    <div class="div_root">
 
      <!--sub title-->
-     <font class="font sub_title">네트워크</font><br>
+     <font class="font sub_title">방화벽</font><br>
 
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class="font text">
         <img class="img" src ="iptables.png">
-         <pre>네트워크 정책은 매체제어 편집기의 두 번째 탭에서 적용할 수 있습니다.
-
-정책의 허용/비허용 라디오 버튼을 통해 기본 값을 선택할 수 있습니다. <i>허용</i>으로 선택시 모든 들어오고 나가는 신호를 허용한다는 의미이며, <i>비허용</i>으로 선택 시 기본 값은 모든 들어오고 나가는 신호를 허용하는 않는 것입니다. 즉, <i>비허용</i>으로 선택하면 인터넷을 사용할 수 없게 됩니다.
-
-아래의 ip table을 통해 블랙 리스트, 화이트 리스트를 관리할 수 있습니다. 이러한 특별한 리스트를 추가하기 위해서는 <i>추가</i> 버튼을, 삭제하기 위해서는 <i>삭제</i>버튼을, 이미 있는 목록을 편집하기 위해서는 <i>편집</i> 버튼을 클릭하세요.
+         <pre>네트워크 정책은 '방화벽' 부분에서 적용할 수 있습니다.
 
 <div  style="margin:30">
   <B>네트워크 정책 추가 및 편집</B><br>
   <pre>
   <i>추가</i> 혹은 <i>편집</i> 버튼을 클릭하면 아래와 같은 창이 열립니다.
-
-  <img class="img" src="edit_tables.png">
 
   <table class="font text" style="width:80%; border-spacing:10px;">
     <tr>
@@ -66,7 +60,7 @@
     </tr>
     </table>
 
-모든 설정을 마치면 <i>확인</i>버튼을 클릭하시고, 최종적으로 <i>저장</i>버튼까지 클릭하셔야 반영됩니다. </div></pre>
+최종적으로 왼쪽 상단 메뉴의 <i>저장</i>버튼까지 클릭하셔야 반영됩니다. </div></pre>
 </div><!--end of sub rectangle-->
          </pre>
          
