--- a/resources/grac-editors/start.html
+++ b/resources/grac-editors/start.html
@@ -34,28 +34,35 @@
         <pre>다음 순서에 따라 매체제어 편집기를 시작해주세요.
         <div class="discription"><pre>1.런처 <img class="img" src="rest.png" style="background-color:#252525"> 버튼을 선택한 다음 작업 표시줄의 검색 상자에 <i>매체제어 편집기</i>를 입력하고 결과 목록에서 매체제어 편집기를 선택합니다.
 
-2.런처 <img class="img" src="rest.png" style="background-color:#252525"> 버튼을 선택한 다음 오른쪽 프로그램 모음에서 매체제어 편집기 <img class="img" src="control-eidt.svg" style="width: 25;"> 아이콘을 선택합니다.
+2.런처 <img class="img" src="rest.png" style="background-color:#252525"> 버튼을 선택한 다음 오른쪽 프로그램 모음에서 매체제어 편집기 <img class="img" src="control-eidt.svg" style="width: 25; border:solid 1px #252525; border-radius: 5px;"> 아이콘을 선택합니다.
 
 3. 사용자 암호를 입력하면 매체제어 편집기가 실행됩니다.
 
-<img class="img" src="input_password.png">  </pre></div></pre>
+<center><img class="img" src="input_password.png" style="border-radius:10px;"></center></pre></div></pre>
       </font>
       </div><!-- end of Rectangle-->
 
       <br><br>
 
      <!--sub title-->
-     <font class="font sub_title">기능 설명</font><br>
+     <font class="font sub_title">메뉴 설명</font><br>
      <!-- Rectangle-->
      <div class="Rectangle">
       <font class="font" style="font-size:14px;">
          <div style="margin:30px;">
+          왼쪽 상단 메뉴 버튼을 클릭하면 다음과 같은 기능들이 존재합니다.<br><br>
            <table class="font text" style="width:80%; border-spacing:10px;">
              <tr>
-               <td><img class="img" src="gtk-refresh.png"></td><td>로컬에 저장되어 있는 매체제어 제어 상태를 불러옵니다.</td>
+               <td>다시읽기(R)</td><td>로컬에 저장되어 있는 매체제어 제어 상태를 불러옵니다.</td>
              </tr>
              <tr>
-               <td><img class="img" src="gtk-save.png"></td><td>매체제어 편집기에서 편집한 상태를 저장합니다.</td>
+               <td>저장(S)<td>매체제어 편집기에서 편집한 상태를 저장합니다.</td>
+             </tr>
+             <tr>
+               <td>서버정책삭제(U)<td>GPMS계정으로 로그인 시,<br>서버에서 내려주는 정책을 삭제할 수 있습니다.</td>
+             </tr>
+             <tr>
+               <td>도움말<td>매체제어 편집기의 도움말을 보여줍니다.</td>
              </tr>
            </table>
          </div>
