--- a/resources/index/index.html
+++ b/resources/index/index.html
@@ -114,9 +114,9 @@ MPlayer 기반 멀티미디어 플레이어를 통해 동영상을 재생할 수
 
      <div class="list_rec right">
        <font class="font text">
-         <pre><a href="../gooroom-help-nemo/index">파일</a>
+         <pre><a href="../gooroom-help-nemo/index">파일 관리자</a>
          
-[파일]은 간단하고 통합된 방법으로 파일과 어플리케이션을 관리할 수 있게 합니다.</pre>
+[파일 관리자]은 간단하고 통합된 방법으로 파일과 어플리케이션을 관리할 수 있게 합니다.</pre>
        </font>
      </div><!--end of 4th-->
 
@@ -148,7 +148,7 @@ MPlayer 기반 멀티미디어 플레이어를 통해 동영상을 재생할 수
      <!--<div class="list_rec right"style="background-color:#FFFFFF">-->
      <!--
        <font class="font text">
-         <pre><a href="../gooroom-help-nemo/index">파일</a></pre>
+         <pre><a href="../gooroom-help-nemo/index">파일 관리자</a></pre>
        </font>
        
        </div>
