--- a/resources/gnome-control-center/privacy-history-recent-off.html
+++ b/resources/gnome-control-center/privacy-history-recent-off.html
@@ -33,7 +33,7 @@
       <!-- Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>최근 사용한 파일 및 폴더를 추적하는 기능을 사용하면 [파일]의 [최근] 탭에 표시되기 때문에 원하는 항목을 쉽게 찾을 수 있습니다. 기록 유지 여부를 설정하거나 특정 기간에 사용한 파일이나 폴더만 추적할 수도 있습니다.
+          <pre>최근 사용한 파일 및 폴더를 추적하는 기능을 사용하면 [파일 관리자]의 [최근] 탭에 표시되기 때문에 원하는 항목을 쉽게 찾을 수 있습니다. 기록 유지 여부를 설정하거나 특정 기간에 사용한 파일이나 폴더만 추적할 수도 있습니다.
 
 다음 단계를 수행하여 사용 내역 추적을 설정합니다.
 
