--- a/resources/gooroom-help-gedit/close_file.html
+++ b/resources/gooroom-help-gedit/close_file.html
@@ -45,7 +45,7 @@
 
   <footer>
   <font class="font ref">자세한 정보</font><br>
-  <a href="basic">기본</a><br><br>
+  <a href="basic">기본: 파일열기, 닫기 및 저장</a><br><br>
   <font class="font ref">참고</font><br>
   <a href="get_started">시작하기</a><br>
   <a href="open">파일 열기</a> - 기존 파일을 열어 편집합니다.
