--- a/resources/gooroom-help-gedit/open_server.html
+++ b/resources/gooroom-help-gedit/open_server.html
@@ -49,8 +49,6 @@
 
 4. 해당 서버의 IP 주소 또는 URL을 입력합니다.
 
-</BODY>
-</HTML>
 5. 열려는 파일을 선택합니다.
 
 6. [문자 인코딩] 드롭다운 목록을 사용하여 적절한 문자 인코딩을 선택합니다.
@@ -60,7 +58,7 @@
          <pre>
 
 
-올바른 URI 유형에는 http:, ftp:, ftp:, file: 및 gvfs에서 지원되는 모든 유형이 포함됩니다.</pre>
+올바른 URI 유형에는 http:, ftp:, file: 및 gvfs에서 지원되는 모든 유형이 포함됩니다.</pre>
          <div class="discription"><pre>일부 URI 유형에서는 파일이 읽기 전용으로 열리며 변경 내용은 다른 위치에 저장해야 합니다. 예를 들어 HTTP는 파일 읽기만 허용합니다. 
          
 일부 FTP 서버의 경우 원격 파일 저장이 올바르게 작동하지 않을 수 있으므로 FTP의 파일은 읽기 전용으로 열립니다.</pre>
