--- a/resources/gooroom-help-gedit/replace_text.html
+++ b/resources/gooroom-help-gedit/replace_text.html
@@ -68,7 +68,19 @@
 [이전 찾기] 명령과 동일하게 작동합니다. 검색 결과를 처음부터 끝까지 진행하려면 이 옵션을 선택합니다.
   
 <B>끝까지 가면 처음부터(P)</B>
-줄바꿈 옵션이 활성화된 상태에서 파일의 마지막까지 검색한 다음 파일 처음에서 검색/바꾸기 작업을 다시 시작합니다. 이렇게 하면 전체 파일에 걸쳐 검색/바꾸기 작업이 수행됩니다.</pre></div>
+줄바꿈 옵션이 활성화된 상태에서 파일의 마지막까지 검색한 다음 파일 처음에서 검색/바꾸기 작업을 다시 시작합니다. 이렇게 하면 전체 파일에 걸쳐 검색/바꾸기 작업이 수행됩니다.  
+
+<B>정규식(G)</B>
+정규식을 이용하여 문자열을 찾고 변경할 수 있습니다. 예를 들어, 메모장에 아래와 같은 내용이 입력되어 있습니다.
+  one.tim
+  one.ben
+  one.greg
+
+찾기(i)에 ([a-z]+)\.([a-z]+) 를 입력하고, 바꿀 문자열(W)에 \2/\1 를 입력한 후 모두 바꾸기(A)를 클릭하면
+다음과 같은 결과를 출력합니다.
+  time/one
+  ben/one
+  greg/one</pre></div>
 
        </font>
      </div><!-- end of Rectangle-->
