--- a/resources/gooroom-help-nemo/nautilus-file-properties-permissions.html
+++ b/resources/gooroom-help-nemo/nautilus-file-properties-permissions.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일</a>
+        <li><a href="index#top">파일 관리자</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#tips_N_questions">유용한 정보</a>
         <li><img class="img" src="grey.svg">
@@ -27,7 +27,7 @@
     <font class="font" style="font-size:22;">파일 권한 설정</font><br><br>
     <font class="font text"><pre>파일 권한을 사용하여 파일을 보고 편집할 수 있는 사용자를 제어할 수 있습니다.<br>
 파일에 대한 권한을 보고 설정하려면 파일을 마우스 오른쪽 버튼으로 클릭하고 [속성]을 선택한 다음 [권한] 탭을 선택합니다.<br>
-설정 가능한 권한 유형에 대한 자세한 내용은 <a href=#files>파일</a> 및 <a href=#folders>폴더</a>를 참조합니다.</pre>
+설정 가능한 권한 유형에 대한 자세한 내용은 <a href=#files>파일 관리자</a> 및 <a href=#folders>폴더</a>를 참조합니다.</pre>
     </font>
 
     <br><br><br>
@@ -46,7 +46,7 @@
 
 소유자 및 파일 그룹에 있는 사용자 이외의 사용자에 대한 권한을 설정할 수도 있습니다.
 
-파일이 스크립트와 같은 프로그램인 경우 [파일을 프로그램으로 실행 허용]을 선택하여 실행해야 합니다. 이 옵션을 선택해도 [파일]는 애플리케이션에서 파일을 열거나 수행할 작업을 요청할 수 있습니다. 자세한 내용은 <a href="nautilus-behavior#executable">실행 가능한 텍스트 파일</a>을 참조합니다.</pre></font>
+파일이 스크립트와 같은 프로그램인 경우 [파일을 프로그램으로 실행 허용]을 선택하여 실행해야 합니다. 이 옵션을 선택해도 [파일 관리자]는 애플리케이션에서 파일을 열거나 수행할 작업을 요청할 수 있습니다. 자세한 내용은 <a href="nautilus-behavior#executable">실행 가능한 텍스트 파일</a>을 참조합니다.</pre></font>
     </div>
 
      <a name="folders"></a>
