--- a/resources/gooroom-help-nemo/nautilus-list.html
+++ b/resources/gooroom-help-nemo/nautilus-list.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일</a>
+        <li><a href="index#top">파일 관리자</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#file_related_task">더 많은 파일 관련 작업</a>
         <li><img class="img" src="grey.svg">
@@ -42,7 +42,7 @@
 폴더 및 파일의 이름입니다. ※이름 열은 숨길 수 없습니다.<br>
 
 <b>크기</b>
-폴더 크기는 폴더에 포함된 항목 개수로 제공됩니다. 파일 크기는 Bytr, KB 또는 MB로 표시됩니다.<br>
+폴더 크기는 폴더에 포함된 항목 개수로 제공됩니다. 파일 크기는 Byte, KB 또는 MB로 표시됩니다.<br>
 
 <b>형식</b>
 PDF 문서, JPEG 이미지, MP3 오디오 등과 같은 폴더 또는 파일 형식으로 표시됩니다.<br>
