--- a/resources/gooroom-help-nemo/nautilus-prefs.html
+++ b/resources/gooroom-help-nemo/nautilus-prefs.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
       <ul>
         <li><img class="img" src="help.svg">
-        <li><a href="index#top">파일</a>
+        <li><a href="index#top">파일 관리자</a>
         <li><img class="img" src="grey.svg">
         <li><a href="index#file_related_task">더 많은 파일 관련 작업</a>
         <li><img class="img" src="grey.svg">
@@ -40,7 +40,7 @@
         <font class="font text">
           <pre><a href="nautilus-display">파일 표시 기본 설정</a>
 
-[파일]에서 표시되는 아이콘 캡션을 제어합니다.</pre>
+[파일 관리자]에서 표시되는 아이콘 캡션을 제어합니다.</pre>
         </font>
       </div>
   
@@ -56,7 +56,7 @@
          <font class="font text"> 
            <pre><a href="nautilus-views">파일 보기 환경 설정</a>
  
-[파일]의 기본 정렬 순서 및 그룹화를 지정합니다.</pre>
+[파일 관리자]의 기본 정렬 순서 및 그룹화를 지정합니다.</pre>
          </font>
        </div>
      <br><br>
