--- a/resources/grac-editors/media.html
+++ b/resources/grac-editors/media.html
@@ -31,7 +31,8 @@
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class="font text">
-         <pre>구름 플랫폼에서 사용 허용/비허용 정책을 지원하는 미디어의 종류는 다음과 같습니다.</pre>
+         <pre>매체제어 편집기는 단말의 정책을 편집합니다. GPMS 계정의 경우 우선적으로 GPMS에서 내려준 정책을 준수합니다. 만약 단만 정책을 적용하고 싶다면 왼쪽상단 메뉴 -> 서버정책삭제(U)를 적용하면 됩니다.
+한컴구름에서 사용 허용/비허용 정책을 지원하는 미디어의 종류는 다음과 같습니다.</pre>
          
          <div style="margin-left:30px;">
            <table class="font text" style="width:80%; border-spacing:10px;">
@@ -86,24 +87,19 @@
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class="font text">
-         <pre>매체제어 편집기에서 다음과 같이 라디오 버튼을 클릭함으로써 정책을 변경할 수 있습니다. 변경을 마친 후에는 반드시 <i>저장</i>버튼을 클릭하셔야 상태가 저장됩니다.
+         <pre>매체제어 편집기에서 다음과 같이 토글 버튼을 클릭함으로써 정책을 변경할 수 있습니다. 변경을 마친 후에는 반드시 왼쪽 상단 메뉴의 <i>저장</i>버튼을 클릭하셔야 상태가 저장됩니다.
         
-<img class="img" src="grac-editors.png">
+<center><img class="img" src="grac-editors.png" style="border-radius:10px;></center>
 
 이벤트 보기를 통해 원하는 작업의 성공여부를 확인할 수 있습니다.
 
-예를 들어, USB 메모리의 상태를 비허용으로 변경 후 저장 버튼을 클릭하면 USB 메모리를 사용할 수 없는 상태가 됩니다. 만약 USB 메모리가 비허용 상태인데, USB 메모리를 삽입하면 모니터 우측 상단에 다음과 같은 안내 메시지가 나타납니다<div class="">
-
-<img class="img" src="message.png">
+예를 들어, USB 메모리의 상태를 비허용으로 변경 후 저장 버튼을 클릭하면 USB 메모리를 사용할 수 없는 상태가 됩니다. 만약 USB 메모리가 비허용 상태인데, USB 메모리를 삽입하면 모니터 우측 상단에 경고 메시지가 나타납니다<div class="">
 
 또한, 하단의 보안 상태 역시 <i>취약</i>상태로 변경되고, USB 메모리가 마운트 되지 않습니다.
 
 USB 메모리의 정책을 <i>읽기전용</i>으로 변경한 후 USB를 삽입하면,
 비허용 상태와 같은 메시지가 오른쪽 상단에 출력됩니다. 보안 상태 역시 <i>취약</i>으로 변경됩니다. 하지만 USB는 마운트가 가능하고, 메모리의 자료들도 읽기 가능합니다.
-메모리의 정보를 수정하거나, 자료를 추가할 시에는 다음과 같은 안내 메시지가 출력되며 저장할 수 없습니다.
-
-<img class="img" src="read-only.png">
-</div></pre>
+메모리의 정보를 수정하거나, 자료를 추가할 시에는 '대상이 읽기 전용입니다.'라는 안내 메시지가 출력되며 저장할 수 없습니다.</div></pre>
        </font>
      </div> <!--end of Rectangle-->
 
@@ -114,7 +110,7 @@ USB 메모리의 정책을 <i>읽기전용</i>으로 변경한 후 USB를 삽입
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class="font text">
-         <pre><i>화이트 리스트</i>는 미디어 매체에 대해서 비허용으로 설정하더라도 특정 매체에 대해서 명시적으로 허가하는 목록입니다. 구름 플랫폼의 매체제어 편집기에서는  USB 메모리, 블루투스, USB 네트워크에 대해 화이트 리스트 기능을 지원하고 있습니다.</pre>
+         <pre><i>화이트 리스트</i>는 미디어 매체에 대해서 비허용으로 설정하더라도 특정 매체에 대해서 명시적으로 허가하는 목록입니다. 한컴구름의 매체제어 편집기에서는  USB 메모리, 블루투스, USB 네트워크에 대해 화이트 리스트 기능을 지원하고 있습니다.</pre>
          <div style="margin-left:30px;">
           <B>USB 메모리</B> <br>
             <pre>USB 메모리의 <i>화이트 리스트</i>버튼을 클릭하고 아래의 절차에 따라 화이트 리스트를 작성해주세요.</pre>
@@ -131,9 +127,7 @@ sudo udevadm monitor -p | grep ID_SERIAL_SHORT
 
 4. 시리얼 넘버를 확인하여 리스트를 작성합니다.
 
-<img class="img" src="usb_serial.png">
-
-5. 확인 버튼을 클릭하고, 저장 버튼을 눌러 적용시킵니다. </pre></div><!--end of flow-->
+5. 입력을 마치면 왼쪽 상단 메뉴의 저장 버튼을 눌러 적용시킵니다. </pre></div><!--end of flow-->
 
 <br><br>
           <B>블루투스</B> <br>
@@ -173,12 +167,8 @@ lsusb -t
 4. 화이트 리스트 창에서 <i>추가</i> 버튼을 클릭합니다.
 
 5. Name 부분에는  <i>usbbus</i> 라고 입력하고, Contents 부분에는 터미널에서 확인한 버스 넘버를 입력합니다. 
-  - <i>삭제</i> 버튼은 화이트 리스트에서 목록을 삭제하기 위해 사용됩니다.
-  - <i>편집</i> 버튼은 이미 추가된 항목의 편집을 위해 사용됩니다.
 
-  <img class="img" src="usb_network_white_list.png">
-
-  6. <i>확인</i> 버튼 클릭 후 <i>저장</i> 버튼을 눌러 정책을 반영시킵니다.</pre></div><!--end of flow-->
+6. 작성한 후 왼쪽 상단 메뉴의 <i>저장</i> 버튼을 눌러 정책을 반영시킵니다.</pre></div><!--end of flow-->
 
          </div><!--end of sub_rectangle-->
        </font>
