--- a/resources/gnome-control-center/display-brightness.html
+++ b/resources/gnome-control-center/display-brightness.html
@@ -25,10 +25,8 @@
     <div class="div_root">
 
       <!--Title -->
-      <img class="img" src="thunderbolt.png">
       <font class="font title">전원</font>
-      <font class="font text">
-        <pre>사용자 컴퓨터의 절전 및 대기 모드를 설정합니다.</pre></font>
+      <font class="font text"><pre>사용자 컴퓨터의 절전 및 대기 모드를 설정합니다.</pre></font>
       <br>
 
       <!--sub title-->
@@ -55,9 +53,7 @@
 
           <img class="img border" src="power_stanby.jpeg" width="700" height="459">
 
-사용자가 컴퓨터 전원 단추를 눌렀을 때 [대기 모드], [전원 끄기], [최대 절전], [아무 것도 안 함] 중 하나의 동작을 수행하도록 설정할 수 있습니다. [아무 것도 안 함]을 선택한 경우 컴퓨터의 전원 단추를 눌러도 아무런 변화가 없습니다.
-
-          <img class="img border" src="power_click_button.jpeg" width="700" height="459"></pre>
+사용자가 컴퓨터 전원 단추를 눌렀을 때 [대기 모드], [전원 끄기], [아무 것도 안 함] 중 하나의 동작을 수행하도록 설정할 수 있습니다. [아무 것도 안 함]을 선택한 경우 컴퓨터의 전원 단추를 눌러도 아무런 변화가 없습니다.
 
         </font>         
       </div>  <!-- end of Rectangle-->
