--- a/resources/gnome-control-center/session-screenlocks.html
+++ b/resources/gnome-control-center/session-screenlocks.html
@@ -59,7 +59,7 @@
       <a href="power#top">전원</a><br><br>
 
       <font class="font ref">참고 항목</font><br>
-      <a href="privacy-screen-lock">자동 화면 잠금</a><br>
+      <a href="privacy-screen-lock"></a><br>
       <a href="display-blank">빈 화면 설정</a></font>
     </footer>
 
