gooroom-security-status-tool Initialization
Change-Id: I22b0c7354edacff2fc49b80b2cd4e4f93c76be1d

--- a/resources/gooroom-security-status-tool/gcsr.html
+++ b/resources/gooroom-security-status-tool/gcsr.html
@@ -31,38 +31,24 @@
      <br><br>
      <a name="start"></a>
      <!-- sub title-->
-     <font class= "font sub_title">단말 등록기 시작하기</font><br>
-     <!-- small box -->
-     <div class="small_rec left">
-       <font class="font text">
-         <pre><a href="start">시작하기</a></pre>
-       </font>
-     </div>
-    <br><br>
-     <a name="page"></a>
-     <!-- sub title-->
-     <font class= "font sub_title">페이지</font><br>
-     <!-- small box -->
-     <div class="small_rec left">
-       <font class="font text">
-         <pre><a href="gpms">구름 관리 서버</a></pre>
-       </font>
-     </div>
-     <div class="small_rec right">
-       <font class="font text">
-         <pre><a href="policy">정책</a></pre>
-       </font>
-     </div>
-     <div class="small_rec left">
-       <font class="font text">
-         <pre><a href="system-info">시스템 정보</a></pre>
-       </font>
-     </div>
-     <div class="small_rec right">
-       <font class="font text">
-         <pre><a href="log-info">로그 정보</a></pre>
-       </font>
-     </div>
+     <font class= "font sub_title">단말 등록하기</font><br>
+     <!-- Rectangle-->
+     <div class="Rectangle">
+      <font class="font" style="font-size:14px;">
+       <pre>다음 절차에 따라 단말을 GPMS에 등록할 수 있습니다. </pre>
+       <div class="discription"><pre>1. [구름 보안상태 도구]의 구름 관리 서버 페이지에서 '단말 등록/재등록' 버튼을 눌러 단말등록기를 실행합니다.
+
+2. '인증키' 부분에서 신규 생성 단말인지 재등록 / 갱신하는 단말인지 선택해 줍니다.
+
+3. '서버 정보' 부분에서 /etc/hosts에 기록하기 체크박스를 클릭합니다.
+
+4. GKM의 서버주소를 입력하고, 4개 서버에 대한 ip주소를 입력합니다.
+
+5. '등록 정보'에서 등록키를 선택한 후, GPMS 페이지에서 확인한 등록키를 입력합니다.
+
+6. 하단의 '등록' 버튼을 클릭해 단말 등록을 마칩니다.</pre></div>
+     </font>
+    </div><!-- end of Rectangle-->         
 
    <!--end of financial cacl-->
    </div> 
