--- a/resources/gooroom-security-status-tool/gpms.html
+++ b/resources/gooroom-security-status-tool/gpms.html
@@ -32,68 +32,12 @@
      <div class="Rectangle">
       <font class="font" style="font-size:14px;">
         <pre>구름 관리 서버 (GPMS)의 정보를 나타냅니다. GPMS는 한컴구름 플랫폼의 중앙 집중적 보안관리 지원을 위한 보안 정책을 일괄 배포 및 원격 모니터링 기능을 지원합니다. 한컴구름 플랫폼을 이용하는 사용자 계정과 단말 통합 관리를 지원하며, 효율적인 관리를 위해 그룹별 정책 생성, 적용 관리합니다. 단말 등록/재등록 버튼을 통해 <a href="gcsr">단말 등록기</a>를 사용하실 수 있습니다.
-        <div class="discription"><pre>1.런처 <img class="img" src="rest.png" style="background-color:#252525"> 버튼을 선택한 다음 작업 표시줄의 검색 상자에 <i>구름 보안상태 도구</i>를 입력하고 결과 목록에서 매체제어 편집기를 선택합니다.
 
-2.런처 <img class="img" src="rest.png" style="background-color:#252525"> 버튼을 선택한 다음 오른쪽 프로그램 모음에서 구름 보안상태 도구 <img class="img" src="gooroom-security-status-tool.svg" style="width: 25; border:solid 1px #252525; border-radius: 5px;"> 아이콘을 선택합니다.
+단말 등록을 마치시면 정보를 확인할 수 있습니다.
 
-3. 사용자 암호를 입력하면 구름 보안상태 도구가 실행됩니다.</pre></div>
-
-또는 오른쪽 하단의 통합 애플릿을 통해 실행할 수 있습니다.
-
-<div class="discription"><table>
-  <tr>
-    <td><img src="integration-applet.png" width="80%" style="border-radius:10px;"></td>
-    <td><pre>1.오른쪽 하단의 통합 애플릿을 클릭합니다.
-
-2. 보안상태 버튼을 클릭합니다.
-
-3. 구름 보안상태 도구 버튼을 클릭하여 프로그램을 실행합니다.</pre></td></tr>
-</table></div></pre>
+'일반' 부분에서는 단말의 정보가, '구름 관리 서버'에서는 서버의 정보가 나타납니다. '구름 에이전트 서비스'를 허용으로 선택하면 GPMS의 정책을 받아올 수 있습니다.</pre>
       </font>
       </div><!-- end of Rectangle-->
-
-      <br><br>
-
-     <!--sub title-->
-     <font class="font sub_title">페이지 기능 설명</font><br>
-     <!-- Rectangle-->
-     <div class="Rectangle">
-      <font class="font" style="font-size:14px;">
-         <div style="margin:30px;">
-          왼쪽 사이드바에서 페이지를 선택할 수 있습니다.<br><br>
-           <table class="font text" style="width:110%; border-spacing:10px;">
-             <tr>
-               <td>구름 관리 서버</td><td>구름 관리 서버 (GPMS)의 정보를 나타냅니다.</td>
-             </tr>
-             <tr>
-               <td>정책<td>권한 정책 정보, 매체 제어 정책, 보안, 네트워크, 알림을 포함합니다.</td>
-             </tr>policy copy
-             <tr>
-               <td>권한 정책 정보<td>GPMS에서 설정한 브라우저 정책을 보여줍니다.</td>
-             </tr>
-             <tr>
-               <td>매체 제어 정책<td>장치, 시스템과 네트워크 정책을 보여줍니다.</td>
-             </tr>
-             <tr>
-               <td>보안<td>단말의 보안 상태와 보안기능 활성화 여부를 확인 할 수 있습니다.</td>
-             </tr>
-             <tr>
-               <td>네트워크<td>네트워크와 방화벽 정책을 보여줍니다.</td>
-             </tr>
-             <tr>
-               <td>알림<td>알림이 오는 조건을 확인할 수 있습니다.</td>
-             </tr>
-             <tr>
-               <td>시스템정보<td>시스템 정보를 보여줍니다.</td>
-             </tr>
-             <tr>
-               <td>로그정보<td>선택한 기간에 발생한 이벤트를 보여줍니다.</td>
-             </tr>
-           </table>
-         </div>
-      </font>
-      </div><!-- end of Rectangle-->
-
    </div> <!--end of root-->
 
       <br><br>
