--- a/resources/gooroom-security-status-tool/log-info.html
+++ b/resources/gooroom-security-status-tool/log-info.html
@@ -1,80 +1,49 @@
-<HTML>
-  <HEAD>
+﻿<html>
+  <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css">
-  </HEAD>
-  <BODY>
-
-       <!--nav bar-->
-   <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
-    <ul>
-      <li><img class="img" src="help.svg">
-      <li><a href="index">매체제어 편집기</a>
-      <li><img class="img" src="grey.svg">
-      <li><a href="index#start">매체제어 편집기 시작하기</a>
-      <li><img class="img" src="grey.svg">
-      <li><a href="#top">시작하기</a>
-    </ul>
-   </nav> <!--end of navbar-->
-
+  </head>
+  <body>
+    <!--nav bar-->
+    <nav class="navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
+      <ul>
+        <li><img class="img" src="help.svg">
+        <li><a href="index">구름 보안상태 도구</a>
+        <li><img class="img" src="grey.svg">
+        <li><a href="index#page">페이지</a>
+        <li><img class="img" src="grey.svg">
+        </li><li><a href="#top">로그 정보</a>
+      </ul>
+    </nav>
+    <!--end of navbar-->
     <!-- header -->
     <header><a name="top"></a></header>
+    <!-- contents  -->
+    <!-- for align 30px -->
+    <div class="div_root">
+      <!--sub title-->
+      <font class="font sub_title">로그 정보</font><br>
 
-   <!-- contents  -->
-
-   <!-- for align 30px -->
-   <div class="div_root">
-
-     <!--sub title-->
-     <font class="font Title">매체제어 편집기 소개</font><br>
-
-     <font class="font sub_title">도입배경</font><br>
-     <!-- Rectangle-->
-     <div class="Rectangle">
-       <font class="font text">
-         <pre>USB 메모리, 외장형 하드디스크 등 저장 매체는 누구나 하나쯤 가지고 있을 정도로 보편적으로 사용 중입니다. 이러한 저장 매체는 정보 관리 차원에서 편의성을 제공하지만, 해당 매체를 분실한 경우에는 대량의 정보 유출로 인한 피해를 발생시키는 원인이 되고 있습니다. 또한, 저장 매체가 바이러스나 악성코드 침투를 위한 새로운 경로로 악용되는 사례도 나타나고 있어 저장 매체의 안전한 이용 및 관리를 위한 대책마련이 요구되는 상황입니다.
-
- 저장 매체를 통한 정보유출 피해를 최소화하기 위한 대책으로 저장 매체에 보안 솔루션을 적용하거나, 보안기능을 갖는 보안 매체를 이용하는 방법이 있습니다.
+      <!--Rectangle-->
+      <div class="Rectangle">
+        <font class="font text">
+          <pre>로그는 <i>알림</i> 페이지의 <a href="policy">알림창 표시 조건(로그 레벨)</a>에 체크된 정보가 기록되어 있습니다. 다음 순서에 맞춰 로그를 확인할 수 있습니다. </pre>
+          <div class="discription">1.<i>로그 정보</i> 탭으로 이동합니다. <br><br>
+          2. 기간의 버튼을 클릭하여 원하는 날짜를 지정합니다.<br><br>
         
- 이를 위해 구름 플랫폼에서는  자체적으로 매체제어 에디터를 제공하고 있습니다.</pre>
-       </font>
-     </div>
-
-     <br><br>
-     <font class="font sub_title">도입효과</font><br>
-     <!-- Rectangle-->
-     <div class="Rectangle">
-       <font class="font text">
-        - 기업/조직 내의 데이터 도난 방지<br><br>
-        - 우발적 데이터 손실 및 유출 방지<br><br>
-        - Stuxnet, Confiker등과 같은 USB 기반 악성코드로부터 보호<br><br>
-       </font>
-     </div>
-
-     <br><br>
-     <font class="font sub_title">주요기능</font><br>
-     <!-- Rectangle-->
-     <div class="Rectangle">
-       <font class="font text">
-        - 서버 없이 PC에 설치되어 접속되는 주요 포트 및 저장 매체 통제<br><br>
-        - USB 메모리, CD/DVD, 무선인터넷 등 주변기기 사용 제어<br><br>
-        - 네트워크 주소, 포트 및 프로토콜 등 으로 필터링 하여 화이트리스트, 블랙 리스트 작성
-       </font>
-     </div>
-
-   </div>   <!-- end of div_root-->
-
+        3. <i>찾기</i> 버튼을 클릭하여 로그 메시지를 확인합니다. </div>
+      </font>
+    </div>  <!-- end of Rectangle-->
+    
+  </div>  <!-- end of div_root-->
   <footer>
-  <font class="font" style="font-size:14px;line-height:2;"><B>참고</B><br>
-  <a href="index#start">매체제어 편집기 시작하기</a></font> <br>
-  <a href="start">시작하기</a></font> <br><br>
+    <font class="font ref">참고 항목</font><br>
+    <a href="index#page">페이지</a><br>
   </footer>
-
   <footer class="info">
-    <a onClick="showMore('name')"
+    <a onclick="showMore('name')"
     class="Options none" onMouseOver="this.className='OptionsOnMouse';"
     onMouseOut="this.className='Options';"><B>정보</B></a><br>
-
     <div id=name style="display:none; width:90%;">
       <table class="font text" style="display:inline-block;" cellspacing="7px" cellpadding="3px">
         <tr>
@@ -82,7 +51,7 @@
         </tr>
         <tr>
           <td style="text-align:center;"><pre><B>번역자</B>
-조성호</pre></td> <td style="text-align:center;"><pre><B>작성자</B>
+조성호</pre></td><td style="text-align:center;"><pre><B>작성자</B>
 조성호</pre></td>
         </tr>
         <tr>
@@ -94,7 +63,5 @@
       </table>
     </div><!--end of name-->
   </footer>
-
-</BODY>
-</HTML>
-
+</body>
+</html>
