--- a/resources/gooroom-security-status-tool/system-info.html
+++ b/resources/gooroom-security-status-tool/system-info.html
@@ -9,11 +9,11 @@
    <nav class="navbar navbar-fixed-top" style="top:20px;margin-left:30px;margin-right:30px;">
     <ul>
       <li><img class="img" src="help.svg">
-      <li><a href="index">매체제어 편집기</a>
+      <li><a href="index">구름 상태보기 도구</a>
       <li><img class="img" src="grey.svg">
-      <li><a href="index#start">매체제어 편집기 시작하기</a>
+      <li><a href="index#page">페이지</a>
       <li><img class="img" src="grey.svg">
-      <li><a href="#top">시작하기</a>
+      <li><a href="#top">시스템 정보</a>
     </ul>
    </nav> <!--end of navbar-->
 
@@ -26,48 +26,36 @@
    <div class="div_root">
 
      <!--sub title-->
-     <font class="font Title">매체제어 편집기 소개</font><br>
+     <font class="font Title">시스템 정보</font><br>
 
-     <font class="font sub_title">도입배경</font><br>
-     <!-- Rectangle-->
-     <div class="Rectangle">
-       <font class="font text">
-         <pre>USB 메모리, 외장형 하드디스크 등 저장 매체는 누구나 하나쯤 가지고 있을 정도로 보편적으로 사용 중입니다. 이러한 저장 매체는 정보 관리 차원에서 편의성을 제공하지만, 해당 매체를 분실한 경우에는 대량의 정보 유출로 인한 피해를 발생시키는 원인이 되고 있습니다. 또한, 저장 매체가 바이러스나 악성코드 침투를 위한 새로운 경로로 악용되는 사례도 나타나고 있어 저장 매체의 안전한 이용 및 관리를 위한 대책마련이 요구되는 상황입니다.
-
- 저장 매체를 통한 정보유출 피해를 최소화하기 위한 대책으로 저장 매체에 보안 솔루션을 적용하거나, 보안기능을 갖는 보안 매체를 이용하는 방법이 있습니다.
-        
- 이를 위해 구름 플랫폼에서는  자체적으로 매체제어 에디터를 제공하고 있습니다.</pre>
-       </font>
-     </div>
-
-     <br><br>
-     <font class="font sub_title">도입효과</font><br>
-     <!-- Rectangle-->
-     <div class="Rectangle">
-       <font class="font text">
-        - 기업/조직 내의 데이터 도난 방지<br><br>
-        - 우발적 데이터 손실 및 유출 방지<br><br>
-        - Stuxnet, Confiker등과 같은 USB 기반 악성코드로부터 보호<br><br>
-       </font>
-     </div>
-
-     <br><br>
-     <font class="font sub_title">주요기능</font><br>
-     <!-- Rectangle-->
-     <div class="Rectangle">
-       <font class="font text">
-        - 서버 없이 PC에 설치되어 접속되는 주요 포트 및 저장 매체 통제<br><br>
-        - USB 메모리, CD/DVD, 무선인터넷 등 주변기기 사용 제어<br><br>
-        - 네트워크 주소, 포트 및 프로토콜 등 으로 필터링 하여 화이트리스트, 블랙 리스트 작성
-       </font>
-     </div>
-
+      <div class="Rectangle">
+        <font class="font text">
+          <div style="margin-left: 30; margin-right: 30;">
+      <table class="font text" style="border-spacing: 10px;">
+        <tr>
+          <td>운영체제 정보</td><td>구름 플랫폼의 버전 정보를 나타냅니다.</td>
+        </tr>
+        <tr>
+          <td>커널 정보</td><td>이용 중인 구름 플랫폼  커널 릴리즈 정보와 커널 버전을 나타냅니다.</td>
+        </tr>
+        <tr>
+          <td>단말 제품번호</td><td>단말의 제품 번호를 출력합니다. </td>
+        </tr>
+        <tr>
+          <td>업데이트 상태</td><td>패키지 업데이트의 상태를 나타냅니다. 자세한 사항은 <a href="../gooroom-help-gooroom-update/index">업데이트 관리자</a>를 참고하세요.</td>
+        </tr>
+        <tr>
+          <td>운영 모드</td><td>단말이 독립적으로 운영되는지, 서버의 클라이언트로 운영 중인지를 나타냅니다.</td>
+        </tr>
+      </table>
+      </div>
+    </font>
+  </div>
    </div>   <!-- end of div_root-->
 
   <footer>
   <font class="font" style="font-size:14px;line-height:2;"><B>참고</B><br>
-  <a href="index#start">매체제어 편집기 시작하기</a></font> <br>
-  <a href="start">시작하기</a></font> <br><br>
+  <a href="index">구름 상태보기 도구</a></font> <br>
   </footer>
 
   <footer class="info">
