--- a/resources/gooroom-help-gedit/search_for_text.html
+++ b/resources/gooroom-help-gedit/search_for_text.html
@@ -83,7 +83,7 @@
   <font class="font" style="font-size:14px;line-height:2;"><B>자세한 정보</B><br>
   <a href="index#file">파일 작업</a></font><br><br>
   <font class="font" style="font-size:14px;line-height:2;"><B>참고</B><br>
-  <a href="replae_text">텍스트 바꾸기</a><br></font>
+  <a href="replace_text">텍스트 바꾸기</a><br></font>
   </footer>
 
   <footer class="info">
