--- a/resources/gooroom-help-nimf-settings/index.html
+++ b/resources/gooroom-help-nimf-settings/index.html
@@ -22,7 +22,7 @@
   <div class="div_root">
 
     <!--TiTle -->
-    <img class="img border" src="setting.svg" width="30" style="border:solid 1px Gray;">
+    <img class="img border" src="setting.svg"  width="30" style="background-color:#78899d; border:solid 1px Gray;">
     <font class="font title" id="title">입력기 설정</font>
     <br>
     <font class = "font text">
