--- a/resources/gnome-control-center/shell-introduction.html
+++ b/resources/gnome-control-center/shell-introduction.html
@@ -94,10 +94,7 @@
    </div>
    <pre>[시작] 단추 오른쪽 옆에 있는 구름 빠른 실행 애플릿 영역에서는 특정 애플리케이션의 아이콘과 이름이 표시되며 이에 대한 빠른 액세스를 제공합니다.
    
-자주 사용하는 애플리케이션을 이 영역에 고정하거나 고정 해제할 수 있습니다. 원하는 애플리케이션을 고정하려면 아이콘에서 마우스 오른쪽 단추를 눌러 [프로그램 고정]을 선택합니다.
-
-구름 운영 체제에서 창을 전환하려면 <a href="shell-windows-switching">창 전환 방식</a>을 참고하세요. 창 전환을 사용하면 주변 환경에 의해 방해받지 않고 현재 작업에 집중할 수 있습니다.</pre>
- </div><!-- end of Rectangle-->
+자주 사용하는 애플리케이션을 이 영역에 고정하거나 고정 해제할 수 있습니다. 원하는 애플리케이션을 고정하려면 아이콘에서 마우스 오른쪽 단추를 눌러 [프로그램 고정]을 선택합니다.</div><!-- end of Rectangle-->
  <!--end of docbar-->
 
  <br><br>
