--- a/resources/gooroom-help-nemo/index.html
+++ b/resources/gooroom-help-nemo/index.html
@@ -2,7 +2,7 @@
  <HEAD>
   <script src="script.js"></script>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>파일</title>
+  <title>파일 관리자</title>
   <link rel="stylesheet" href="style.css" type="text/css">
  </HEAD>
  <BODY>
@@ -23,7 +23,7 @@
 
     <!--TiTle -->
     <img class="img border" src="folder.svg" width="30" style="border:solid 1px Gray;">
-    <font class="font title" id="title">파일</font>
+    <font class="font title" id="title">파일 관리자</font>
     <font class="font text">
         <pre>[파일 관리자]은 간단하고 통합된 방법으로 파일과 어플리케이션을 관리할 수 있게 합니다.<br>
 [파일 관리자]는 파일을 폴더로 정리할 수 있게 도와줍니다. 폴더는 파일 뿐 아니라 다른 폴더도 포함할 수 있습니다.<br>
